fixed liking
